# knd

./: .gitignore  beani.py  billing_graph.py  calc_mcp.py  evals_exp.ipynb  exp.ipynb  exp.py  fin_exp.ipynb  footy_blog.md  footy_pormpt.md  footy_proposal.md  fuse_exp.ipynb  graphs.ipynb  grok_excel.txt  hiring_force.ipynb  hiring_force_app.py  hiring_force_ui.py  issues.ipynb  local_python_executor.py  mcp.ipynb  mem_exp.ipynb  memory_blog.md  mems.json  messages.json  monitor_prompt.md  pc_specs.html  poem_mcp.py  pyproject.toml  rhc_update.ipynb  rimal_exp.ipynb  surf.ipynb  surf.py  test_exp.ipynb  todo.ipynb  val.py  zap_mcp.py
fin/: agent_prompts.py  agents.ipynb  models.py
src/knd/: ai.py  mem_models.py  memory.py  prompts.py  result_types.py  tools.py  utils.py
static/: style.css
tests/: test_id_checker.py  test_mem_models.py
