[project]
name = "knd"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hamza Farhan", email = "thehamza96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.4.247",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.3",
    "pydantic-ai>=0.0.18",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["**/", "!src/"]
