[project]
name = "knd"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hamza Farhan", email = "thehamza96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "crawl4ai>=0.4.247",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "logfire>=3.2.0",
    "loguru>=0.7.3",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "pydantic-ai>=0.0.18",
    "pydantic[email]>=2.10.6",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["**/", "!src/"]
